@@ -9,6 +9,7 @@ Enhancements
 
 Bug fixes
  - [core] handle multi-valued mozillasecondemail attribute mapping
+ - [web] improve popup window detection in message viewer (#4518)
 
 4.0.1 (2018-07-10)
 ------------------
